030-software/fluxcd/apps/miniflux/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: miniflux
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: miniflux
