030-software/fluxcd/apps/miniflux/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: miniflux
spec:
  hostnames:
  - miniflux.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: miniflux
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
